# symmetria-file-manager

./: .gitignore  .qmllint.ini  CLAUDE.md  FUTURE.md  PRD.md  QUIRKS.md  README.md  build-plugin.sh  install.sh  run.sh  shell.qml  yazi-fm.service
.github/workflows/: ci.yml
components/: Anim.qml  CAnim.qml  FileIcon.qml  FileOpener.qml  MaterialIcon.qml  PreviewLoadingIndicator.qml  PreviewStateIndicator.qml  StateLayer.qml  StyledScrollBar.qml  StyledText.qml
config/: Config.qml  FileManagerConfig.qml
host/standalone/: main.qml  server.cpp
modules/filemanager/: ArchivePreview.qml  AudioPreview.qml  ContextMenuPopup.qml  CreateFilePopup.qml  DeleteConfirmPopup.qml  FallbackPreview.qml  FileList.qml  FileListItem.qml  FileManager.qml  FuzzyFinderPopup.qml  ImagePreview.qml  MillerColumns.qml  ParentPanel.qml  PathBar.qml  PreviewMetadata.qml  PreviewPanel.qml  RenamePopup.qml  Sidebar.qml  SpreadsheetPreview.qml  StatusBar.qml  TextPreview.qml  VideoPreview.qml  WhichKeyPopup.qml  WindowFactory.qml  ZoxidePopup.qml
plugin/: CMakeLists.txt
plugin/src/YaziFM/Models/: CMakeLists.txt  archivepreviewmodel.cpp  archivepreviewmodel.hpp  filesystemmodel.cpp  filesystemmodel.hpp  previewimagehelper.cpp  previewimagehelper.hpp  spreadsheetpreviewmodel.cpp  spreadsheetpreviewmodel.hpp  syntaxhighlighthelper.cpp  syntaxhighlighthelper.hpp
plugin/tests/: ArchivePreviewModelTest.cpp  CMakeLists.txt  EnvTest.cpp  (+5 more)
portal/: install-portal.sh  symmetria_portal.py
services/: BookmarkService.qml  FileManagerService.qml  Paths.qml  Theme.qml  WindowState.qml
(+31 files in other folders)
